<resources>
    <string name="app_name">上理教务</string>
    <string name="login_title">上海理工大学教务系统</string>
    <string name="login_subtitle">统一身份认证原生客户端</string>
    <string name="student_id_hint">学号 / 工号</string>
    <string name="password_hint">密码</string>
    <string name="btn_login">登 录</string>
    <string name="logging_in">正在登录并同步个人与学籍信息...</string>
    <string name="login_failed">登录失败，请检查学号与密码</string>
    <string name="profile_title">学生个人信息</string>
    <string name="logout">退出登录</string>
</resources>
